fix : extra padding issue

--- a/sass/backend/editor.scss
+++ b/sass/backend/editor.scss
@@ -18,6 +18,10 @@ body.post-type-sureforms_form {
 		}
 	}
 
+	.edit-post-visual-editor__content-area {
+		padding: 0 !important;
+	}
+
 	.block-editor-block-list__layout .block-editor-block-list__block:not( .editor-post-title__input ) {
 		transition: 0.3s;
 
